--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "lucide-react": "^0.562.0",
         "next": "16.1.1",
         "ogl": "^1.0.11",
+        "prismjs": "^1.30.0",
         "react": "19.2.3",
         "react-dom": "19.2.3",
         "tailwind-merge": "^3.4.0",
@@ -23,6 +24,7 @@
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
         "@types/node": "^20",
+        "@types/prismjs": "^1.26.5",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "babel-plugin-react-compiler": "1.0.0",
